--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -15,3 +15,12 @@ com.kute.blog.bignumber=${random.long}
 com.kute.blog.test1=${random.int(10)}
 # 10-20的随机数
 com.kute.blog.test2=${random.int[10,20]}
+
+
+# data source setting
+spring.datasource.tomcat.url=jdbc:mysql://localhost:3306/test
+spring.datasource.tomcat.sername=root
+spring.datasource.tomcat.password=bailong110
+spring.datasource.tomcat.driver-class-name=com.mysql.jdbc.Driver
+
+
