--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -18,9 +18,13 @@ com.kute.blog.test2=${random.int[10,20]}
 
 
 # data source setting
-spring.datasource.tomcat.url=jdbc:mysql://localhost:3306/test
-spring.datasource.tomcat.sername=root
-spring.datasource.tomcat.password=bailong110
-spring.datasource.tomcat.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.sername=root
+spring.datasource.password=bailong110
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# security
+logging.level.org.springframework.security=INFO
+
 
 
