--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ server.port=8080
 
 # 指明当前生效的环境: application-test.properties
 spring.profiles.active=test
+
+debug=false
+
+# 终端日志彩色输出
+spring.output.ansi.enabled=detect
