--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -18,10 +18,11 @@ com.kute.blog.test2=${random.int[10,20]}
 
 
 # data source setting
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.sername=root
+spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
 spring.datasource.password=bailong110
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+ssl
 
 # security
 logging.level.org.springframework.security=INFO
