--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -18,11 +18,30 @@ com.kute.blog.test2=${random.int[10,20]}
 
 
 # data source setting
+# 默认的tomcat-jdbc 数据源设置
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=bailong110
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-ssl
+
+
+mysql.datasource.master.url=jdbc:mysql://localhost:3306/masterdb?characterEncoding=utf8&useSSL=false
+mysql.datasource.master.username=root
+mysql.datasource.master.password=bailong110
+mysql.datasource.master.driver-class-name=com.mysql.jdbc.Driver
+mysql.datasource.master.pool-size=30
+
+mysql.datasource.master2.url=jdbc:mysql://localhost:3306/masterdb2?characterEncoding=utf8&useSSL=false
+mysql.datasource.master2.username=root
+mysql.datasource.master2.password=bailong110
+mysql.datasource.master2.driver-class-name=com.mysql.jdbc.Driver
+mysql.datasource.master2.pool-size=30
+
+mysql.datasource.slave.url=jdbc:mysql://localhost:3306/slavedb?characterEncoding=utf8&useSSL=false
+mysql.datasource.slave.username=root
+mysql.datasource.slave.password=bailong110
+mysql.datasource.slave.driver-class-name=com.mysql.jdbc.Driver
+mysql.datasource.slave.pool-size=30
 
 # security
 logging.level.org.springframework.security=INFO
