--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -18,7 +18,7 @@ com.kute.blog.test2=${random.int[10,20]}
 
 
 # data source setting
-# 默认的tomcat-jdbc 数据源设置
+# 默认的tomcat-jdbc 数据源设置, 如果添加了自定义数据源,则默认的会被忽略
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=bailong110
@@ -45,6 +45,10 @@ mysql.datasource.slave.pool-size=30
 
 # security
 logging.level.org.springframework.security=INFO
+
+# sping batch
+# 是否在启动时执行所有的job
+spring.batch.job.enabled=true
 
 
 
