--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
             <version>5.0.0.Alpha2</version>
         </dependency>
 
-        <!-- -->
+        <!-- swagger2 -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
@@ -141,6 +141,14 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
         </dependency>
+
+        <!-- thrift -->
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.11.0</version>
+        </dependency>
+
     </dependencies>
 
 	<build>
