--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -48,7 +48,7 @@ logging.level.org.springframework.security=INFO
 
 # sping batch
 # 是否在启动时执行所有的job
-spring.batch.job.enabled=true
+spring.batch.job.enabled=false
 
 
 
