--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
             </plugin>
+
             <!-- https://github.com/facebook/swift/tree/master/swift-maven-plugin -->
             <plugin>
                 <groupId>com.facebook.mojo</groupId>
@@ -222,16 +223,16 @@
                 <configuration>
                     <skip>false</skip>
                     <idlFiles>
-                        <directory>${project.basedir}/src/main/resources/thrift/com/kute/demo/rpc/thrift/simple</directory>
+                        <directory>${project.basedir}/src/main/resources/thrift/com/kute/demo/rpc/thrift/swift</directory>
                         <includes>
                             <include>**/*.thrift</include>
                         </includes>
                         <excludes>
-                            <exclude>**/other.thrift</exclude>
+                            <exclude>**/Types.thrift</exclude>
                         </excludes>
                     </idlFiles>
-                    <defaultPackage>${project.groupId}.demo.rpc.thrift.swift</defaultPackage>
                     <outputFolder>${project.basedir}/src/main/java</outputFolder>
+                    <!--<defaultPackage>${project.groupId}.demo.rpc.thrift.swift</defaultPackage>-->
                     <addCloseableInterface>true</addCloseableInterface>
                 </configuration>
             </plugin>
