--- a/pom.xml
+++ b/pom.xml
@@ -187,12 +187,29 @@
         <dependency>
             <groupId>com.facebook.swift</groupId>
             <artifactId>swift-codec</artifactId>
-            <version>0.23.1</version>
+            <version>0.23.0</version>
         </dependency>
         <dependency>
             <groupId>com.facebook.swift</groupId>
             <artifactId>swift-generator</artifactId>
-            <version>0.23.1</version>
+            <version>0.23.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.facebook.nifty</groupId>
+            <artifactId>nifty-core</artifactId>
+            <version>0.23.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.facebook.nifty</groupId>
+            <artifactId>nifty-client</artifactId>
+            <version>0.23.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.1.0</version>
         </dependency>
 
     </dependencies>
@@ -235,6 +252,15 @@
                     <!--<defaultPackage>${project.groupId}.demo.rpc.thrift.swift</defaultPackage>-->
                     <addCloseableInterface>true</addCloseableInterface>
                 </configuration>
+            </plugin>
+            <!--
+            检查项目依赖/插件更新版本
+            mvn versions:display-dependency-updates
+             -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.5</version>
             </plugin>
 		</plugins>
 	</build>
