--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -46,6 +46,11 @@ mysql.datasource.slave.pool-size=30
 # security
 logging.level.org.springframework.security=INFO
 
+security.ignored=/**
+spring.security.enabled=false
+management.security.enabled=false
+security.basic.enabled=false
+
 # sping batch
 # 是否在启动时执行所有的job
 spring.batch.job.enabled=false
