--- a/src/main/resources/shiro/quickstart/shiro.ini
+++ b/src/main/resources/shiro/quickstart/shiro.ini
@@ -33,7 +33,9 @@
 # username = password, role1, role2 ... roleN
 root = secret, admin
 guest = guest, guest
-kute = pwd, admin, guest, developer
+kute = pwd, admin, guest, developer, 白名单
+eb = pwd, boy
+bd = pwd, girl
 
 # -----------------------------------------------------------------------------
 # Roles with assigned permissions
