--- a/src/main/resources/shiro/quickstart/shiro.ini
+++ b/src/main/resources/shiro/quickstart/shiro.ini
@@ -34,8 +34,9 @@
 root = secret, admin
 guest = guest, guest
 kute = pwd, admin, guest, developer, 白名单
-eb = pwd, boy
-bd = pwd, girl
+eb = pwd, eb
+bd = pwd, bd
+mta = pwd, mta
 
 # -----------------------------------------------------------------------------
 # Roles with assigned permissions
@@ -49,3 +50,6 @@ admin = *
 guest = userService:create, userService:update
 developer = inventoryService:*
 role = service:discover:1
+eb = userService:resource:queryCommon
+bd = userService:resource:*
+mta = *
