--- a/src/main/resources/shiro/quickstart/shiro.ini
+++ b/src/main/resources/shiro/quickstart/shiro.ini
@@ -50,6 +50,6 @@ admin = *
 guest = userService:create, userService:update
 developer = inventoryService:*
 role = service:discover:1
-eb = userService:resource:queryCommon
-bd = userService:resource:*
-mta = *
+eb = fruit:apple:eat
+bd = fruit:apple:*
+mta = fruit:*
