--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,15 +5,15 @@
         <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
     </listener>
 
-    <filter>
-        <display-name>HystrixRequestContextServletFilter</display-name>
-        <filter-name>HystrixRequestContextServletFilter</filter-name>
-        <filter-class>com.kute.demo.hystrix.filter.HystrixRequestContextServletFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>HystrixRequestContextServletFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!--<filter>-->
+        <!--<display-name>HystrixRequestContextServletFilter</display-name>-->
+        <!--<filter-name>HystrixRequestContextServletFilter</filter-name>-->
+        <!--<filter-class>com.kute.demo.hystrix.filter.HystrixRequestContextServletFilter</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>HystrixRequestContextServletFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
 
     <servlet>
         <description></description>
