--- a/src/main/resources/shiro/quickstart/shiro.ini
+++ b/src/main/resources/shiro/quickstart/shiro.ini
@@ -33,7 +33,7 @@
 # username = password, role1, role2 ... roleN
 root = secret, admin
 guest = guest, guest
-kute = pwd, admin, guest, developer, 白名单
+kute = pwd, admin, guest, developer, 白名单, new
 eb = pwd, eb
 bd = pwd, bd
 mta = pwd, mta
@@ -53,3 +53,4 @@ role = service:discover:1
 eb = fruit:apple:eat
 bd = fruit:apple:*
 mta = fruit:*
+new = *
